Fixes row gaps in batch/cell
(cherry picked from commit dbce124561b64f40194a8687c14d837eeff1086f)

--- a/styles/widgets/generic/gridBase.generic.less
+++ b/styles/widgets/generic/gridBase.generic.less
@@ -716,6 +716,12 @@
                     }
                 }
             }
+
+            td:not(.dx-cell-modified):not(.dx-validation-pending) {
+                .dx-highlight-outline {
+                    padding: 0;
+                }
+            }
         }
 
         .dx-row-removed > td {
